--- a/BackGQL/package.json
+++ b/BackGQL/package.json
@@ -16,5 +16,8 @@
     "graphql-tag": "^2.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.18"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
