--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
