--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
+    "apollo-link-state": "^0.4.2",
     "axios": "^0.21.0",
     "expo": "~39.0.2",
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "fiction-expo-restart": "^1.0.5",
     "graphql": "^15.4.0",
+    "graphql-ws": "^2.0.1",
     "jwt-decode": "^3.1.2",
     "react": "16.13.1",
     "react-dom": "16.13.1",
