--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-native-fontawesome": "^0.2.6",
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@react-native-community/cameraroll": "^4.0.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.2",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "apollo-link-state": "^0.4.2",
     "axios": "^0.21.0",
+    "browser-image-compression": "^1.0.13",
     "expo": "~39.0.2",
+    "expo-camera": "~9.0.0",
+    "expo-image-manipulator": "^8.4.0",
     "expo-linear-gradient": "~8.3.0",
+    "expo-media-library": "~9.2.1",
     "expo-status-bar": "~1.0.2",
     "fiction-expo-restart": "^1.0.5",
     "graphql": "^15.4.0",
@@ -30,7 +35,10 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-image-resizer": "^1.4.1",
+    "react-native-optimized-flatlist": "^1.0.4",
     "react-native-reanimated": "~1.13.0",
     "react-native-restart": "0.0.17",
     "react-native-safe-area-context": "3.1.4",
@@ -41,7 +49,8 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "subscriptions-transport-ws": "^0.9.18"
+    "subscriptions-transport-ws": "^0.9.18",
+    "expo-image-picker": "~9.1.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
