--- a/BackGQL/package.json
+++ b/BackGQL/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^2.19.0",
+    "apollo-server-express": "^2.19.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express-fileupload": "^1.2.0",
     "graphql-tag": "^2.11.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.18"
