--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@apollo/client": "^3.3.4",
+    "@apollo/client": "^3.3.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
@@ -20,14 +20,15 @@
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "apollo-link-state": "^0.4.2",
-    "axios": "^0.21.0",
+    "apollo-upload-client": "^14.1.3",
     "browser-image-compression": "^1.0.13",
-    "expo": "~39.0.2",
+    "expo": "^39.0.5",
     "expo-camera": "~9.0.0",
     "expo-image-manipulator": "^8.4.0",
+    "expo-image-picker": "~9.1.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-media-library": "~9.2.1",
-    "expo-status-bar": "~1.0.2",
+    "expo-status-bar": "^1.0.3",
     "fiction-expo-restart": "^1.0.5",
     "graphql": "^15.4.0",
     "graphql-ws": "^2.0.1",
@@ -49,8 +50,7 @@
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "subscriptions-transport-ws": "^0.9.18",
-    "expo-image-picker": "~9.1.0"
+    "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
